--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -28,7 +28,7 @@
 
     <style name="txt_tbl_ans">
         <item name="android:textSize">15dp</item>
-        <item name="android:textColor">#757575</item>
+        <item name="android:textColor">@color/tbl_ans</item>
         <item name="android:gravity">center</item>
         <item name="android:padding">8sp</item>
         <item name="android:layout_width">wrap_content</item>
@@ -54,6 +54,9 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">45dp</item>
     </style>
-
+<!--    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">-->
+<!--        &lt;!&ndash; Other theme attributes &ndash;&gt;-->
+<!--        <item name="materialCalendarTheme">@style/AppTheme</item>-->
+<!--    </style>-->
 </resources>
 
