--- a/app/src/main/res/layout/fragment_admin_see_task.xml
+++ b/app/src/main/res/layout/fragment_admin_see_task.xml
@@ -1,116 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
     android:background="@color/background"
     tools:context=".admin_see_task">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.03"
-        app:cardCornerRadius="20dp"
-        tools:ignore="MissingConstraints">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-        <HorizontalScrollView
+        <TableLayout
+            android:id="@+id/tablelayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:background="@drawable/table_background"
+            android:stretchColumns="*">
 
-            <TableLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:stretchColumns="*">
+        </TableLayout>
 
-                <TableRow
-                    android:background="#E6E1E1">
+    </ScrollView>
 
-                    <TextView
-                        android:text="Sr No"
-                        style="@style/txt_tbl_heading"/>
-
-                    <TextView
-                        android:text="Employee Id"
-                        style="@style/txt_tbl_heading"/>
-
-                    <TextView
-                        android:text="Task descripltion"
-                        style="@style/txt_tbl_heading"/>
-
-                    <TextView
-                        android:text="End by"
-                        style="@style/txt_tbl_heading"/>
-
-                    <TextView
-                        android:text="Action"
-                        style="@style/txt_tbl_heading"/>
-
-                </TableRow>
-
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="1dp"
-                    android:background="#858383" />
-
-                <TableRow>
-
-                    <TextView
-                        android:text="1"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="EMP101"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="Documentation complete"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="02 January 2024"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="Done"
-                        android:textColor="#5ED663"
-                        style="@style/txt_tbl_ans"/>
-
-                </TableRow>
-
-                <TableRow>
-
-                    <TextView
-                        android:text="2"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="EMP105"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="Module 1 complete"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="05 January 2024"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="Panding"
-                        android:textColor="#C8F35D57"
-                        style="@style/txt_tbl_ans"/>
-
-                </TableRow>
-
-            </TableLayout>
-
-        </HorizontalScrollView>
-
-    </androidx.cardview.widget.CardView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
